Fix topic size buttons on mobile

--- a/h5p-bildetema/src/components/TopicSizeButtons/TopicSizeButtons.module.scss
+++ b/h5p-bildetema/src/components/TopicSizeButtons/TopicSizeButtons.module.scss
@@ -8,12 +8,16 @@
 
 .buttonBig,
 .buttonCompact {
+  color: #000;
   cursor: pointer;
+  line-height: 50%;
   min-width: 2.5rem;
   max-width: 2.5rem;
   min-height: 2.5rem;
   max-height: 2.5rem;
   overflow: hidden;
+  padding: 0;
+  text-align: center;
   background-color: transparent;
   border-radius: 8px;
   border-color: transparent;
